name:                hethdb
version:             0.1.0.0
synopsis:            Libreria para administrar BD con información del blockchain Ethereum.
homepage:            none
license:             BSD3
license-file:        LICENSE
author:              The Linux Kitten
maintainer:          thelinuxkitten@thelinuxkitten.org
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.Ethereum.RLP
                     , Data.Ethereum.EvmDisasm
  build-depends:       base >=4 && <5
                     , bytestring
                     , hethrpc
                     , parsec
                     , text
  ghc-options:       -ddump-splices
  hs-source-dirs:      src
  default-language:    Haskell2010

executable hethdb
  main-is:                main.hs
  build-depends:          base >= 4 && < 5
                        , bytestring
                        , containers
                        , deepseq
                        , hethdapp
                        , hethdb
                        , hethrpc
                        , hjsonrpc
                        , io-streams
                        , mysql-haskell
                        , monad-logger
                        , parallel
                        , text
                        , unix
  ghc-options:          -threaded
  hs-source-dirs:       demo
  default-language:     Haskell2010

